<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="hw5.cmpe277.com.hw5_android_datastorage.MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="29dp"
        android:text="@string/TextView1"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="77dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.038" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:text="@string/TextView2"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="29dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="333dp"
        android:text="@string/TextView4"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="161dp"
        android:layout_height="29dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="250dp"
        android:text="@string/TextView3"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FanStatus"
        android:layout_width="161dp"
        android:layout_height="68dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="427dp"
        android:background="@drawable/red_textview"
        android:gravity="center"
        android:minHeight="181dp"
        android:onClick="save"
        android:text="@string/Button3"
        android:textColor="@color/whiteColor"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintLeft_toRightOf="@+id/SprinklerStatus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SprinklerStatus"
        android:layout_width="127dp"
        android:layout_height="70dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="427dp"
        android:background="@drawable/purple_textview"
        android:gravity="center"
        android:onClick="cancel"
        android:text="@string/Button4"
        android:textColor="@color/whiteColor"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ItemReviewID"
        android:layout_width="343dp"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="372dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ItemPriceID"
        android:layout_width="343dp"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="292dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ItemDescriptionID"
        android:layout_width="339dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="210dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ItemNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="70dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>
